# sternhamla-server

./: .gitignore  Cargo.toml  README.md  flake.nix
docs/: protocol.md
src/: bytes_sizes.rs  lib.rs  lut.rs  piece.rs  protocol.rs
src/board/: lut.rs  mod.rs
src/four_criteria/: mod.rs
src/server/: client.rs  handshake.rs  messages.rs  mod.rs  protocol.rs  ws.rs
src/sterhalma/: mod.rs  timing.rs
src/sterhalma/board/: lut.rs  mod.rs  movement.rs  player.rs
src/sternhalma/: mod.rs  timing.rs
src/sternhalma/board/: lut.rs  mod.rs  movement.rs  player.rs
src/tictactoe/: mod.rs
src/utils/: bytes_sizes.rs  mod.rs
tests/: connection.rs  gameplay.rs  reconnection.rs
tests/common/: mod.rs
web-client/: README.md  package-lock.json  package.json
web-client/src/: App.tsx  Board.tsx  Game.tsx  WelcomeScreen.tsx  constants.ts  index.css  main.tsx  protocol.ts
