[package]
name = "sternhalma-server"
version = "0.1.0"
edition = "2024"

[dependencies]

# Command line argument parsing
clap = { version = "4", features = ["derive"] }

# Networking
tokio = { version = "1", features = ["full"] }

# Iteration
itertools = "0.14"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
ciborium = "0.2"
tokio-util = {version = "0.7", features = ["codec"] }
bytes = "1"

# Logging
log = "0.4"
env_logger = "0.11"

# Error handling
thiserror = "2"
anyhow = "1"

# Testing
rand = "0.9"
rand_xoshiro = "0.7"
rand_distr = "0.5"
